# habits

./: .gitignore  CLAUDE.md  README.md  TECHNICAL_IMPLEMENTATION_PLAN.md  habits_tracker_prd.md  pyproject.toml
docs/: CLI_REFERENCE.md  README.md  USAGE_EXAMPLES.md
habits_tracker/: __init__.py
habits_tracker/cli/: __init__.py  main.py
habits_tracker/cli/commands/: analytics.py  categories.py  data.py  habits.py  performance.py  templates.py  tracking.py
habits_tracker/core/: __init__.py  database.py  models.py
habits_tracker/core/services/: analytics_service.py  backup_service.py  category_service.py  editing_service.py  export_service.py  habit_service.py  import_service.py  template_service.py  tracking_service.py  visualization_service.py
habits_tracker/utils/: cache.py  date_utils.py  display.py  performance.py
scripts/: performance_benchmark.py
tests/: __init__.py  test_analytics_service.py  test_cli_integration.py  test_edge_cases.py  test_error_conditions.py  test_habit_service.py  test_performance_stress.py  test_tracking_service.py  test_visualization_service.py
